wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
// ==============================================
// Navigation
// ==============================================

// Global menu styles
// =================================

// UL
.menu {
	list-style: none;
	margin: 0;
	padding: 0;

	.menu-item {
		display: block;
		font-size: rem-calc(16px);
		text-transform: uppercase;
		letter-spacing: 0.01em;

		&:last-of-type {
			margin-right: 0;
		}

		a {
			display: inline-block;
			border-bottom: 1px solid transparent;

			&:hover,
			&:focus {
				border-bottom-color: inherit;
			}
		}
	}
}

.primary--menu {

	@include breakpoint(medium down) {
		margin-bottom: rem-calc(40px);
	}

	@include breakpoint(xlarge down) {
		width: 100%;
		text-align: center;
	}

	> .menu-item {
		padding: $small-spacing;
		font-family: $heading-font;
		letter-spacing: 0.05em;

		@include breakpoint(large) {
			display: inline-block;
			padding: 0;
			padding-right: $large-spacing;
		}

		@include breakpoint(large) {
			font-size: rem-calc(12px);
		}

		@include breakpoint(xxlarge) {
			font-size: rem-calc(14px);
		}

		> a {
			color: white;

			&:hover,
			&:focus {
				border-bottom-color: var(--brand-neon-green);
			}
		}
	}

	.menu-item-has-children {
		// position: relative;
		// padding-right: 3px;

		// toggle arrows up/down
		.sub-menu-toggle[aria-expanded="false"] {
			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='%2350e887' d='M4.251 181.1C7.392 177.7 11.69 175.1 16 175.1c3.891 0 7.781 1.406 10.86 4.25l197.1 181.1l197.1-181.1c6.5-6 16.64-5.625 22.61 .9062c6 6.5 5.594 16.59-.8906 22.59l-208 192c-6.156 5.688-15.56 5.688-21.72 0l-208-192C-1.343 197.7-1.749 187.6 4.251 181.1z'/%3E%3C/svg%3E");
			background-size: 15px auto;
			background-position: 10px center;

			+ .sub-menu {
				display: none;
			}
		}
		.sub-menu-toggle[aria-expanded="true"] {
			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='%2350e887' d='M443.8 330.8C440.6 334.3 436.3 336 432 336c-3.891 0-7.781-1.406-10.86-4.25L224 149.8l-197.1 181.1c-6.5 6-16.64 5.625-22.61-.9062c-6-6.5-5.594-16.59 .8906-22.59l208-192c6.156-5.688 15.56-5.688 21.72 0l208 192C449.3 314.3 449.8 324.3 443.8 330.8z'/%3E%3C/svg%3E");
			background-size: 15px auto;
			background-position: 10px center;

			+ .sub-menu {
				display: flex;
				flex-flow: row wrap;
				justify-content: space-around;
				width: 100%;
				max-height: 100vh;
				overflow: scroll;
				z-index: 9;

				@include breakpoint(medium down) {
					flex-flow: column;
				}
			}
		}
	}

	// toggle the submenu
	.sub-menu-toggle {
		position: relative;
		right: 0;
		display: inline-block;
		vertical-align: middle;
		width: 40px;
		height: 40px;
		background-color: transparent;
		background-repeat: no-repeat;
		border: 0;
		cursor: pointer;
	}

	// styles for all sub-menu's
	.sub-menu {		
		padding: $medium-spacing;
		background-color: white;
		border-radius: 5px;

		@include breakpoint(large) {
			position: absolute;
			left: 0;
			top: 100%;
		}
		
		&.brands {
			.menu-item {
				flex: 0 0 25%;
				padding-top: $medium-spacing;
				margin: 5px;

				@include breakpoint(medium down) {
					flex: 0 0 100%;
					margin: 0;
				}

				&:nth-child(even) {
					background-color: var(--brand-l-grey);
				}
			}
		}

		.menu-item {
			display: block;
			padding-bottom: $medium-spacing;
			color: black;
			cursor: pointer;

			@include breakpoint(large) {
				font-size: rem-calc(12px);
			}

			@include breakpoint(xxlarge) {
				font-size: rem-calc(14px);
			}

			a {

				&:hover,
				&:focus {
					border-bottom-color: var(--brand-neon-green);
				}
			}
		}
	}

	// make of car, e.g. Audi
	// menu-item-has-children
	.level-1 {

		> .sub-menu {
			margin: 0;
			width: 100%;
			box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
			transition: all 0.5s ease;
			overflow: scroll;

			@include breakpoint(large) {
				display: block;
				min-width: 300px;
				max-height: 80vh;
				z-index: 999;
			}

			@include breakpoint(xxlarge) {
				display: flex;
				flex-flow: row wrap;
				width: max-content;
				max-height: 100vh;
			}
		}
	}

	.sub-sub-menu {
		margin: 0;
		padding: 0;
	}

	// models of that car
	// menu-item-has-children
	.level-2 {
		padding-left: $medium-spacing;
		padding-right: $medium-spacing;

		&.menu-item {
			padding: 0;
			text-align: left;

			> a {
				padding: $medium-spacing;
			}

			&:nth-child(even) {
				background-color: var(--brand-l-grey);
			}
		}

		> .sub-menu {
			position: relative;
			top: 0;
			font-weight: $regular;
			background-color: transparent;

			@include breakpoint(large) {
				display: block !important;
			}
			
			.menu-item {
				text-align: left;
			}
		}

		.sub-menu-toggle {
			display: none;
		}
	}
}

